--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <script>
+        // Redirecionamento automático imediato
+        window.location.href = "https://gestaodecustohrdjsn.github.io/patrimonio-hrdjsn/fotos/teste_chat.html";
+    </script>
+</head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Patrimônio {id_patrimonio} - {nome_item}</title>
@@ -148,3 +154,4 @@
     </div>
 </body>
 </html>
+
