--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -140,14 +140,15 @@
 
             <!-- LOGOS NO FINAL -->
             <div class="logos">
-                <img src="https://github.com/gestaodecustohrdjsn/patrimonio-hrdjsn/blob/main/fotos/layout/logo_hospital.png?raw=true" alt="Logo Hospital">
-                <img src="https://github.com/gestaodecustohrdjsn/patrimonio-hrdjsn/blob/main/fotos/layout/logo_mais_saude_completo2.png?raw=true" alt="Logo Instituto Mais Saúde">
+                <img src="./fotos/layout/logo_hospital.png?raw=true" alt="Logo Hospital">
+                <img src="./fotos/layout/logo_mais_saude_completo2.png?raw=true" alt="Logo Instituto Mais Saúde">
             </div>
 
         </div>
     </div>
 </body>
 </html>
+
 
 
 
