--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://gestaodecustohrdjsn.github.io/patrimonio-hrdjsn/fotos/teste_chat.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Patrimônio {id_patrimonio} - {nome_item}</title>
     <style>
@@ -148,6 +149,7 @@
     </div>
 </body>
 </html>
+
 
 
 
