--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -109,7 +109,7 @@
         <div class="content">
             
             <!-- FOTO PRINCIPAL DO OBJETO -->
-            <img class="item-image" src="https://github.com/gestaodecustohrdjsn/patrimonio-hrdjsn/blob/main/fotos/objetoteste.jpg?raw=true" alt="Foto do Patrimônio {id_patrimonio}">
+            <img class="item-image" src="./objetoteste.jpg?raw=true" alt="Foto do Patrimônio {id_patrimonio}">
 
             <div class="info-group">
                 <div class="info-item full-width-item">
@@ -148,6 +148,7 @@
     </div>
 </body>
 </html>
+
 
 
 
