--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -83,7 +83,8 @@
             padding: 5px 10px;
             border-radius: 4px;
             font-weight: bold;
-            margin-top: 10px;
+            margin-top: 5px;
+            font-size: 1.1em;
         }
         .logos {
             display: flex;
@@ -147,6 +148,7 @@
     </div>
 </body>
 </html>
+
 
 
 
