--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -55,7 +55,7 @@
         }
         .info-item {
             flex: 1 1 45%;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             padding: 15px;
             background-color: #f5efef     ;
             border-radius: 10px;
@@ -84,7 +84,7 @@
             border-radius: 4px;
             font-weight: bold;
             margin-top: 2px;
-            font-size: 1.3em;
+            font-size: 1.4em;
         }
         .logos {
             display: flex;
@@ -136,7 +136,8 @@
                     <strong>Grupo</strong>
                     <span>{grupo_equipamento}</span>
                 </div>
-
+            </div>
+            
             <!-- LOGOS NO FINAL -->
             <div class="logos">
                 <img src="./layout/logo_hospital.png?raw=true" alt="Logo Hospital">
@@ -147,6 +148,7 @@
     </div>
 </body>
 </html>
+
 
 
 
