--- a/fotos/teste_chat.html
+++ b/fotos/teste_chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Patrimônio {id_patrimonio} - {nome_item}</title>
+    <title> {id_patrimonio}</title>
     <style>
         
         body { 
@@ -148,6 +148,7 @@
     </div>
 </body>
 </html>
+
 
 
 
