--- a/testes/teste_chat.html
+++ b/testes/teste_chat.html
@@ -140,14 +140,15 @@
             
             <!-- LOGOS NO FINAL -->
             <div class="logos">
-                <img src="./layout/logo_hospital.png?raw=true" alt="Logo Hospital">
-                <img src="./layout/logo_mais_saude_completo2.png?raw=true" alt="Logo Instituto Mais Saúde">
+                <img src="patrimonio-hrdjsn/layout/logo_hospital.png?raw=true" alt="Logo Hospital">
+                <img src="patrimonio-hrdjsn/layout/logo_mais_saude_completo2.png?raw=true" alt="Logo Instituto Mais Saúde">
             </div>
 
         </div>
     </div>
 </body>
 </html>
+
 
 
 
