--- a/testes/teste_novo.html
+++ b/testes/teste_novo.html
@@ -130,7 +130,7 @@
 
                       <div class="info-item">
                           <strong>Valor Estimado</strong>
-                          <span>599</span>
+                          <span>R$ 599</span>
                       </div>
 
                       <div class="info-item">
