--- a/testes/teste_novo.html
+++ b/testes/teste_novo.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
       <html lang="pt-BR">
       <head>
           <meta charset="UTF-8">
@@ -109,7 +110,7 @@
               <div class="content">
 
                   <!-- FOTO PRINCIPAL DO OBJETO -->
-                  <img class="item-image" src= ../fotos/125081.jepg?raw=true alt="Foto do Patrimônio 125081">
+                  <img class="item-image" src= "../fotos/125081.jpeg?raw=true" alt="Foto do Patrimônio 125081">
 
                   <div class="info-group">
                       <div class="info-item full-width-item">
